--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "xlsx": "^0.18.5"
