--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
+    "recharts": "^2.15.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
